--- a/views/error.pug
+++ b/views/error.pug
@@ -1,8 +1,6 @@
-extends layout.pug
+extends layout
 
 block content
- div
-   p= message || 'An unexpected error occurred on the server.'
- if stack
-   h3 Stack Trace
-   pre= stack
+  h1= message
+  h2= error.status
+  pre #{error.stack}
