--- a/views/index.pug
+++ b/views/index.pug
@@ -1,4 +1,11 @@
-extends layout.pug
+extends layout
+
+append head
+  //- add page specific styles by appending to the head
+  link(rel="stylesheet" href="/stylesheets/index.css")
+  //- add page specific js
+  script(src="/javascripts/index.js" type="module" defer)
 
 block content
-  p Hello from the Amusement Park Tracker app!
+  h1= title
+  p Welcome to your Project Skeleton
