navbar created, started sign-up form template

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -1,8 +1,11 @@
-doctype html
-html
-  head
-      block head
-        title="Express Starter App"
-        link(rel='stylesheet' href='/stylesheets/reset.css')
-  body
-    block content
+//- doctype html
+//- html
+//-   head
+//-       block head
+//-         title="Express Starter App"
+//-         link(rel='stylesheet' type="text/css" href='/stylesheets/reset.css')
+//-   body
+//-     h1#title Binger Project
+//-       div.text its me
+     
+      
