--- a/views/navbar.pug
+++ b/views/navbar.pug
@@ -11,9 +11,9 @@ html(lang="en")
         title Binger
     body 
      nav(class="navbar")
-        a(class="nav-text" href="#") Navbar
-        a(class="nav-text" href="#") Features
-        a(class="nav-text" href="#") Pricing
+        a(class="nav-text" href="#") Browse
+        a(class="nav-text" href="#") Home
+        a(class="nav-text" href="#") Sign-in!
      block content 
     form(class="form" method="GET" action="/sign-up")
         label(for="username") Username:
