--- a/views/layout.pug
+++ b/views/layout.pug
@@ -1,11 +1,18 @@
-//- doctype html
-//- html
-//-   head
-//-       block head
-//-         title="Express Starter App"
-//-         link(rel='stylesheet' type="text/css" href='/stylesheets/reset.css')
-//-   body
-//-     h1#title Binger Project
-//-       div.text its me
-     
-      
+doctype html
+html(lang="en")
+    head
+        meta(charset="UTF-8")
+        meta(http-equiv="X-UA-Compatible", content="IE=edge")
+        meta(name="viewport", content="width=device-width, initial-scale=1.0")
+        link(rel='stylesheet' type="text/css" href='/stylesheets/navbar.css')
+        link(rel="preconnect" href="https://fonts.googleapis.com")
+        link(rel="preconnect" href="https://fonts.gstatic.com" crossorigin)
+        link(href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" rel="stylesheet")
+        title Binger
+    body 
+     nav(class="navbar")
+        a(class="nav-text" href="#") Browse
+        a(class="nav-text" href="#") Home
+        a(class="nav-text" href="#") Sign-in!
+    block content
+    
