--- a/views/sign-up.pug
+++ b/views/sign-up.pug
@@ -1,6 +1,14 @@
-extends navbar
-    form(method="GET" action="/sign-up")
-        label(for="username") Username:
-        input(type="string" id="username" name="username")
-        label(for="password") Password:
-        input(type="string" id="password" name="password")
+doctype html
+html(lang="en")
+    head
+        meta(charset="UTF-8")
+        meta(http-equiv="X-UA-Compatible", content="IE=edge")
+        meta(name="viewport", content="width=device-width, initial-scale=1.0")
+        title Document
+    body 
+        form(class="form" method="POST" action="/sign-up")
+            label(for="username") Username:
+            input(type="string" id="username" name="username")
+            label(for="password") Password:
+            input(type="string" id="password" name="password")
+            button(type="submit") Sign-up!
