--- a/views/layout.pug
+++ b/views/layout.pug
@@ -8,13 +8,14 @@ html(lang="en")
         link(rel="preconnect" href="https://fonts.googleapis.com")
         link(rel="preconnect" href="https://fonts.gstatic.com" crossorigin)
         link(href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" rel="stylesheet")
-        link(rel="icon" type="image/x-icon" href="/stylesheets/favicon.ico")
+        link(rel="icon" type="image/png" href="/stylesheets/favicon.ico")
         title Binger
     body
      nav(class="navbar")
         a(class="nav-text" href="#") Browse
         a(class="nav-text" href="/") Home
-        a(class="nav-text" href="#") Sign-in!
+        a(class="nav-text" href="/sign-in") Sign-in
+        a(class="nav-text" href="/sign-up") Sign-up
      div
         form(method='get' action='/browse')
           input(type='search' name='keyword' placeholder='Keyword' )
