--- a/views/sign-in.pug
+++ b/views/sign-in.pug
@@ -4,6 +4,7 @@ html(lang="en")
         meta(charset="UTF-8")
         meta(http-equiv="X-UA-Compatible", content="IE=edge")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
+        link(rel="icon" type="image/png" href="/stylesheets/favicon.ico")
         link(rel='stylesheet' type="text/css" href='/stylesheets/sign-up.css')
         title User Sign Up/In
     body 
