--- a/views/sign-up.pug
+++ b/views/sign-up.pug
@@ -4,15 +4,14 @@ html(lang="en")
         meta(charset="UTF-8")
         meta(http-equiv="X-UA-Compatible", content="IE=edge")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
+        link(rel="icon" type="image/png" href="/stylesheets/favicon.ico")
         link(rel='stylesheet' type="text/css" href='/stylesheets/sign-up.css')
         title User Sign Up/In
     body 
-        div
+        div(class="centering-form")
             form(class="form" method="POST" action="/sign-up")
                 h2 Sign Up
                 input(type="string" id="username" name="username" placeholder='Username')
                 input(type="string" id="password" name="password" placeholder='Password')
                 input(type="string" id="confirmPassword" name="confirmPassword" placeholder='Confirm Password')
                 button(type="submit") Sign-up!
-
-
