--- a/views/layout.pug
+++ b/views/layout.pug
@@ -19,7 +19,7 @@ html(lang="en")
          input(type='search' name='keyword' placeholder='Keyword' )
          label(for='showTime') Show Time:
          select(id='showTime' name='showTime')
-           each time in times
-             option(value= time)
+          //-  each time in times
+            //-  option(value= time)
          button(type='submit') Search
     block content
