--- a/views/sign-up.pug
+++ b/views/sign-up.pug
@@ -7,8 +7,14 @@ html(lang="en")
         link(rel="icon" type="image/png" href="/stylesheets/favicon.ico")
         link(rel='stylesheet' type="text/css" href='/stylesheets/sign-up.css')
         title User Sign Up/In
-    body 
+    body
         div
+            if errors
+                div
+                    ul
+                        each error in errors
+                            li  #{error}
+
             form(class="form" method="POST" action="/sign-up")
                 h2 Sign Up
                 input(type="hidden" name="_csrf" value=csrfToken)
