edited layout view

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -23,5 +23,9 @@ html(lang="en")
         //-     each time in times
         //-       option(value= time)
           button(type='submit') Search
+     div(class="main-content")
+      h2(class="welcome") Welcome to Binger!
+      h3(class="welcome2") Follow your favorite tv shows!
+       
       
     block content
