--- a/views/layout.pug
+++ b/views/layout.pug
@@ -19,9 +19,9 @@ html(lang="en")
         form(method='get' action='/browse')
           input(type='search' name='keyword' placeholder='Keyword' )
           label(for='showTime') Show Time:
-          select(id='showTime' name='showTime')
-            each time in times
-              option(value= time)
+          //- select(id='showTime' name='showTime')
+          //-   each time in times
+          //-     option(value= time)
           div
             input(type='checkbox' id='cartoons' name='cartoons')
             label(for='cartoons') Cartoons
@@ -33,7 +33,6 @@ html(lang="en")
             label(for='drama') Drama
             input(type='checkbox' id='scary' name='scary')
             label(for='scary') Scary
-
           button(type='submit') Search
      div(class="main-content")
       h2(class="welcome") Welcome to Binger!
