--- a/views/layout.pug
+++ b/views/layout.pug
@@ -18,20 +18,24 @@ html(lang="en")
      div
         form(method='get' action='/browse')
           input(type='search' name='keyword' placeholder='Keyword' )
-          label(for='showTime') Show Time:
+          //- label(for='showTime') Show Time:
           //- select(id='showTime' name='showTime')
           //-   each time in times
           //-     option(value= time)
           div
-            input(type='checkbox' id='cartoons' name='cartoons')
+            input(type='checkbox' id='cartoons' name='cartoons' value='Cartoon')
             label(for='cartoons') Cartoons
-            input(type='checkbox' id='comedy' name='comedy')
+            input(type='checkbox' id='comedy' name='comedy' value='Comedy')
             label(for='comedy') Comedy
-            input(type='checkbox' id='documentary' name='documentary')
+            input(type='checkbox' id='documentary' name='documentary' value='Documentary')
             label(for='documentary') Documentary
-            input(type='checkbox' id='drama' name='drama')
+            input(type='checkbox' id='drama' name='drama' value='Drama')
             label(for='drama') Drama
-            input(type='checkbox' id='scary' name='scary')
+            input(type='checkbox' id='educational' name='educational' value='Educational')
+            label(for='cartoons') Cartoons
+            input(type='checkbox' id='romance' name='romance' value='Romance')
+            label(for='cartoons') Romance
+            input(type='checkbox' id='scary' name='scary' value='Scary')
             label(for='scary') Scary
           button(type='submit') Search
      div(class="main-content")
