--- a/views/sign-in.pug
+++ b/views/sign-in.pug
@@ -8,16 +8,15 @@ html(lang="en")
         link(rel='stylesheet' type="text/css" href='/stylesheets/sign-up.css')
         title User Sign Up/In
     body
-        div
-            form(class='form' method="POST" action="/sign-in")
-                h2 Sign In
-                div
-                    if errors
-                        div
-                            ul
-                                each error in errors
-                                    li  #{error}
-                input(type="hidden" name="_csrf" value=csrfToken)
-                input(type="string" id="username" name="username" placeholder='Username')
-                input(type="string" id="password" name="password" placeholder='Password')
-                button(type="submit") Sign-in!
+        form(class='form' method="POST" action="/sign-in")
+            h2 Sign In
+            div
+                if errors
+                    div
+                        ul
+                            each error in errors
+                                li(class="sign-in-errors")  #{error}
+            input(type="hidden" name="_csrf" value=csrfToken)
+            input(type="string" id="username" name="username" placeholder='Username')
+            input(type="password" id="password" name="password" placeholder='Password')
+            button(type="submit") Sign-in!
