--- a/public/stylesheets/sign-up.css
+++ b/public/stylesheets/sign-up.css
@@ -23,6 +23,7 @@ form {
 }
 button {
     background-color: rgb(223, 223, 223);
+    border-radius: 5px;
 }
 
 label {
@@ -31,4 +32,15 @@ label {
 }
 input {
     margin-bottom: 20px;
+}
+
+li {
+    list-style-type: none;
+    display: flex;
+    color: red;
+}
+
+.sign-in-error {
+    display: flex;
+    align-content: flex-start;
 }
