--- a/views/layout.pug
+++ b/views/layout.pug
@@ -11,32 +11,42 @@ html(lang="en")
         link(rel="icon" type="image/png" href="/stylesheets/favicon.ico")
         title Binger
     body
-     nav(class="navbar")
+      nav(class="navbar")
         a(class="nav-text" href="/") Home
-        a(class="nav-text" href="/sign-in") Sign-in
-        a(class="nav-text" href="/sign-up") Sign-up
-     div
-        form(method='get' action='/browse')
-          input(type='search' name='keyword' placeholder='Keyword' )
-          label(for='showTime') Show Time:
-          //- select(id='showTime' name='showTime')
-          //-   each time in times
-          //-     option(value= time)
-          div
-            input(type='checkbox' id='cartoons' name='cartoons')
-            label(for='cartoons') Cartoons
-            input(type='checkbox' id='comedy' name='comedy')
-            label(for='comedy') Comedy
-            input(type='checkbox' id='documentary' name='documentary')
-            label(for='documentary') Documentary
-            input(type='checkbox' id='drama' name='drama')
-            label(for='drama') Drama
-            input(type='checkbox' id='scary' name='scary')
-            label(for='scary') Scary
-          button(type='submit') Search
-     div(class="main-content")
-      h2(class="welcome") Welcome to Binger!
-      h3(class="welcome2") Follow your favorite tv shows!
-
-
-    block content
+        a(class="nav-text" href="/sign-in") Login
+        a(class="nav-text" href="/sign-up") Register
+      div
+        block content
+        div(class="column search-area")
+          form(method='get' action='/browse')
+            div(class="searchbox")
+              input(type='search' name='keyword' placeholder='Keyword' )
+              button(type='submit') Search
+              //- label(for='showTime') Show Time:
+              //- select(id='showTime' name='showTime')
+              //-   each time in times
+              //-     option(value= time)
+            div(class="genres")
+              input(type='checkbox' id='cartoons' name='cartoons')
+              label(for='cartoons') Cartoons
+            div(class="genres")
+              input(type='checkbox' id='comedy' name='comedy')
+              label(for='comedy') Comedy
+            div(class="genres")
+              input(type='checkbox' id='documentary' name='documentary')
+              label(for='documentary') Documentary
+            div(class="genres")
+              input(type='checkbox' id='drama' name='drama')
+              label(for='drama') Drama
+            div(class="genres")
+              input(type='checkbox' id='scary' name='scary')
+              label(for='scary') Scary
+            div(class="genres")
+              input(type='checkbox' id='romance' name='romance')
+              label(for='romance') Romance
+      block foot
+        footer
+          p Vu
+          p Matthew 
+          p Christopher 
+          p Chiew
