--- a/views/layout.pug
+++ b/views/layout.pug
@@ -18,7 +18,7 @@ html(lang="en")
       div
         block content
         div(class="column search-area")
-          form(method='get' action='/browse')
+          form(method='post' action='/browse')
             div(class="searchbox")
               input(type='search' name='keyword' placeholder='Keyword' )
               button(type='submit') Search
