--- a/views/home.pug
+++ b/views/home.pug
@@ -2,5 +2,5 @@ extends layout.pug
 
 block content
     div(class="column main-content")
-        h2(class="welcome") Welcome to Binger!
-        h3(class="welcome2") Follow your favorite tv shows!
+        h2(class="welcome") Welcome to Binger
+        h3(class="welcome2") Follow your favorite TV shows
