--- a/views/layout.pug
+++ b/views/layout.pug
@@ -11,42 +11,47 @@ html(lang="en")
         link(rel="icon" type="image/png" href="/stylesheets/favicon.ico")
         title Binger
     body
-      nav(class="navbar")
-        a(class="nav-text" href="/") Home
-        a(class="nav-text" href="/sign-in") Login
-        a(class="nav-text" href="/sign-up") Register
-      div
-        block content
-        div(class="column search-area")
-          form(method='post' action='/browse')
-            div(class="searchbox")
-              input(type='search' name='keyword' placeholder='Keyword' )
-              button(type='submit') Search
-              //- label(for='showTime') Show Time:
-              //- select(id='showTime' name='showTime')
-              //-   each time in times
-              //-     option(value= time)
-            div(class="genres")
-              input(type='checkbox' id='cartoons' name='cartoons')
-              label(for='cartoons') Cartoons
-            div(class="genres")
-              input(type='checkbox' id='comedy' name='comedy')
-              label(for='comedy') Comedy
-            div(class="genres")
-              input(type='checkbox' id='documentary' name='documentary')
-              label(for='documentary') Documentary
-            div(class="genres")
-              input(type='checkbox' id='drama' name='drama')
-              label(for='drama') Drama
-            div(class="genres")
-              input(type='checkbox' id='scary' name='scary')
-              label(for='scary') Scary
-            div(class="genres")
-              input(type='checkbox' id='romance' name='romance')
-              label(for='romance') Romance
-      block foot
-        footer
-          p Vu
-          p Matthew
-          p Christopher
-          p Chiew
+      div(class="container")
+        div(class="header")
+          nav(class="navbar")
+            a(class="nav-text" href="/") Home
+            a(class="nav-text" href="/sign-in") Login
+            a(class="nav-text" href="/sign-up") Register
+          div(class="body")
+            block content
+            div(class="column search-area")
+              form(method='post' action='/browse')
+                div(class="searchbox")
+                  input(type='search' name='keyword' placeholder='Keyword' )
+                  button(type='submit') Search
+                  //- label(for='showTime') Show Time:
+                  //- select(id='showTime' name='showTime')
+                  //-   each time in times
+                  //-     option(value= time)
+                div(class="genres")
+                  input(type='checkbox' id='cartoons' name='cartoons')
+                  label(for='cartoons') Cartoons
+                div(class="genres")
+                  input(type='checkbox' id='comedy' name='comedy')
+                  label(for='comedy') Comedy
+                div(class="genres")
+                  input(type='checkbox' id='documentary' name='documentary')
+                  label(for='documentary') Documentary
+                div(class="genres")
+                  input(type='checkbox' id='drama' name='drama')
+                  label(for='drama') Drama
+                div(class="genres")
+                  input(type='checkbox' id='scary' name='scary')
+                  label(for='scary') Scary
+                div(class="genres")
+                  input(type='checkbox' id='romance' name='romance')
+                  label(for='romance') Romance
+          block foot
+            footer
+              div(class="footer")
+                p(class="names") Vu Matthew Christopher Chiew
+                div(class="github-links")
+                  a(href="https://github.com/vth-co") Github
+                  a(href="https://github.com/mpuer") Github
+                  a(href="https://github.com/chrisbritton842") Github
+                  a(href="https://github.com/chiews89") Github
