seeding tv  show done

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -39,8 +39,8 @@ html(lang="en")
               input(type='checkbox' id='drama' name='drama')
               label(for='drama') Drama
             div(class="genres")
-              input(type='checkbox' id='scary' name='scary')
-              label(for='scary') Scary
+              input(type='checkbox' id='horror' name='horror')
+              label(for='horror') Horror 
             div(class="genres")
               input(type='checkbox' id='romance' name='romance')
               label(for='romance') Romance
