--- a/views/layout.pug
+++ b/views/layout.pug
@@ -48,10 +48,16 @@ html(lang="en")
                   label(for='romance') Romance
           block foot
             footer
-              div(class="footer")
-                p(class="names") Vu Matthew Christopher Chiew
-                div(class="github-links")
+              div(class="bottom")
+                div(class="names")
+                  p Vu
                   a(href="https://github.com/vth-co") Github
+                div(class="names")
+                  p Matthew 
                   a(href="https://github.com/mpuer") Github
+                div(class="names")
+                  p Christopher 
                   a(href="https://github.com/chrisbritton842") Github
+                div(class="names")
+                  p Chiew
                   a(href="https://github.com/chiews89") Github
