finished adding images

--- a/views/browse.pug
+++ b/views/browse.pug
@@ -6,11 +6,11 @@ block content
         div
             ul
                 each show in tvShows
+                    li #{show.images}
                     li #{show.name}
-                    li #{show.rating}
                     li #{show.genre}
+                    li #{show.rating}
                     li #{show.synopsis}
-
 
 
 
