tv shows view + logic fixed

--- a/public/stylesheets/navbar.css
+++ b/public/stylesheets/navbar.css
@@ -122,3 +122,10 @@ label {
 search-box {
     padding-bottom: 100px;
 }
+/* 
+
+.image-1 {
+    background-image: url('../../images/ozark.jpeg');
+    width: 200px;
+    height: 100%;
+} */
