--- a/public/stylesheets/navbar.css
+++ b/public/stylesheets/navbar.css
@@ -11,6 +11,7 @@ body {
     align-items: center;
     height: 70px;
     background-color: rgb(228, 220, 210);
+    
 
 }
 
@@ -75,6 +76,9 @@ footer {
     position:absolute;
     bottom:0;
     width:100%;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
 }
 
 .bottom {
