--- a/views/browse.pug
+++ b/views/browse.pug
@@ -1,18 +1,23 @@
 extends layout.pug
 
+append head
+    script(src='/javascripts/browse.js' type='module' defer)
+
 block content
     div(class="column browse-content")
         h2= `TV Shows`
         div
             ul
                 each show in tvShows
-                    li 
-                      div 
+                    li
+                      div
                         img(src=show.image)
                         p #{show.name}
                         p #{show.genre}
                         p #{show.rating}
                         p #{show.synopsis}
+                        textarea(id="review", cols="30", rows="10")
+                        button(value='Post')
 
 
 
