completed browse.js javascript

--- a/views/browse.pug
+++ b/views/browse.pug
@@ -17,7 +17,7 @@ block content
                         p #{show.rating}
                         p #{show.synopsis}
                         textarea(id="review", cols="30", rows="10")
-                        button(value='Post')
+                        button(id="review-button" value='Post')
 
 
 
