--- a/public/stylesheets/navbar.css
+++ b/public/stylesheets/navbar.css
@@ -10,7 +10,7 @@ body {
     justify-content:space-evenly;
     align-items: center;
     height: 70px;
-    background-color: rgb(228, 220, 210);
+    background-color: blanchedalmond;
     
 
 }
@@ -126,10 +126,43 @@ label {
 search-box {
     padding-bottom: 100px;
 }
-/* 
 
-.image-1 {
-    background-image: url('../../images/ozark.jpeg');
-    width: 200px;
-    height: 100%;
-} */
+.images {
+    width: 50%;
+    height: fit-content;
+    padding: 15px 15px;
+}
+
+li {
+    list-style-type: none;
+}
+
+ul {
+    padding-bottom: 200px;
+}
+
+.shows {
+    display: flex;
+    flex-direction: row;
+    border: 2px solid #dadada;
+    border-radius: 7px;
+    outline: none;
+    border-color: #ed9e9e;
+    box-shadow: 0 0 10px #ed9e9e;
+}
+
+
+.description {
+    padding-left: 25px;
+}
+
+h2 {
+    text-align: center;
+   
+}
+
+.titles {
+    font-size: 150%;
+}
+
+
