--- a/views/browse.pug
+++ b/views/browse.pug
@@ -16,6 +16,7 @@ block content
                         p #{show.genre}
                         p #{show.rating}
                         p #{show.synopsis}
+                        data(id="movie-id" value=show.id)
                         textarea(id="review", cols="30", rows="10")
                         button(id="review-button" value='Post')
 
