--- a/public/stylesheets/navbar.css
+++ b/public/stylesheets/navbar.css
@@ -1,6 +1,7 @@
 body {
     display: flex;
     flex-direction: column;
+    /* background-color: black; */
     
 }
 
@@ -19,7 +20,7 @@ a.nav-text {
     text-decoration: none;
     font-size: 40px;
     font-weight: bold;
-    color: brown;
+    color: rgb(163, 64, 64);
     font-family: 'Montserrat', sans-serif;
 }
 
@@ -95,7 +96,7 @@ a {
 
 p {
     font-weight: 900;
-    color:rosybrown
+    color:rgb(163, 64, 64);
 }
 
 form {
@@ -121,6 +122,7 @@ button {
 
 label {
     padding-left: 10px;
+    color: rgb(0, 255, 255);
 }
 
 search-box {
@@ -158,11 +160,15 @@ ul {
 
 h2 {
     text-align: center;
-   
+    color:rgb(175, 103, 243);
+
+
 }
 
 .titles {
     font-size: 150%;
 }
 
-
+.titles.rating.synopsis.genre {
+    color:rgb(0, 255, 255);
+}
