--- a/views/users.pug
+++ b/views/users.pug
@@ -4,3 +4,9 @@ block content
     div(class="column user-content")
         div(class="column channel-content")
         h2 Channels
+            ul
+                each channel in channels
+                    li
+                        div
+                            p #{channel.title}
+
