--- a/views/browse.pug
+++ b/views/browse.pug
@@ -17,6 +17,13 @@ block content
                         p #{show.rating}
                         p #{show.synopsis}
                         data(id="show-id" value=show.id)
+                        select(id="rating-select")
+                            option(value="") Rate this show!
+                            option(value=1) 1
+                            option(value=2) 2
+                            option(value=3) 3
+                            option(value=4) 4
+                            option(value=5) 5
                         textarea(id="review", cols="30", rows="10")
                         button(id="review-button" value='Post')
 
