--- a/views/browse.pug
+++ b/views/browse.pug
@@ -12,9 +12,10 @@ block content
                         div(class="description")
                             p(class="titles") #{show.name}
                             p(class="genre") #{show.genre}
-                            p(class="rating") #{show.rating}
+                            p(class="rating") Ratings: #{show.rating}/5
                             p(class="synopsis") #{show.synopsis}
-                            select
-                                    each channel in channels
-                                        option(value=channel.name)
-                            button(type="submit") Add To Channels
+                            form(action="/users" method="post")
+                                select
+                                        each channel in channels
+                                            option #{channel.title}
+                                button(type="submit" ) Add to Channels
