--- a/views/layout.pug
+++ b/views/layout.pug
@@ -15,9 +15,9 @@ html(lang="en")
         div(class="header")
           nav(class="navbar")
            if logged
-            a(class="nav-text" href="/") Home
-            a(class="nav-text" href="/sign-in") Profile
-            a(class="nav-text" href="/sign-up") Logout 
+            a(class="nav-text" href="/browse") Home
+            a(class="nav-text" href="/users") Profile
+            a(class="nav-text" href="/users/logout") Logout 
            else
             a(class="nav-text" href="/") Home
             a(class="nav-text" href="/sign-in") Login
