--- a/views/sign-up.pug
+++ b/views/sign-up.pug
@@ -6,7 +6,7 @@ html(lang="en")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
         link(rel="icon" type="image/png" href="/stylesheets/favicon.ico")
         link(rel='stylesheet' type="text/css" href='/stylesheets/sign-up.css')
-        title User Sign Up/In
+        title User Register
     body
         form(class="form" method="POST" action="/sign-up")
             h2 Sign Up
