--- a/views/browse.pug
+++ b/views/browse.pug
@@ -15,7 +15,7 @@ block content
                             p(class="rating") Ratings: #{show.rating}/5
                             p(class="synopsis") #{show.synopsis}
                             form(action="/users" method="post")
-                                input(name="name" type="hidden" value=show.name)
+                                input(name="showId" type="hidden" value=show.id)
                                 select(id="channelName" name="channelName")
                                         each channel in channels
                                             option(value=channel.title)= channel.title
