--- a/views/users.pug
+++ b/views/users.pug
@@ -4,5 +4,5 @@ block content
     div(class="column user-content")
         div(class="column channel-content")
         h2 Channels
-                div #{channelName}
-                    div #{name}
+                div #{channel.channelName}
+                    div #{channel.Tvshow.name}
