--- a/views/users.pug
+++ b/views/users.pug
@@ -4,5 +4,6 @@ block content
     div(class="column user-content")
         div(class="column channel-content")
         h2 Channels
-                div #{channel.channelName}
-                    div #{channel.Tvshow.name}
+                h3 #{channel.title}
+                    each show in shows
+                        h4  #{show.name}
