--- a/views/home.pug
+++ b/views/home.pug
@@ -2,3 +2,5 @@ extends layout.pug
 
 block content
     div(class="column main-content")
+        img(class="binger-image" src="/images/binger_update.png")
+        div Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris non felis a massa congue faucibus. Interdum et malesuada fames ac ante ipsum primis in faucibus. Proin porta pulvinar sem, in vestibulum libero sagittis non. Mauris eget cursus quam, et venenatis nunc. Maecenas ultrices varius posuere. Etiam vitae fringilla sem. Nam vel luctus nisi, a feugiat nisl. Nullam feugiat vehicula turpis commodo fermentum. Sed ac finibus augue. Sed eu gravida dui, ut interdum diam. Aenean dapibus, elit sit amet dictum lobortis, justo neque volutpat urna, vestibulum posuere lectus orci auctor eros.
