--- a/views/users.pug
+++ b/views/users.pug
@@ -4,6 +4,7 @@ block content
     div(class="column user-content")
         div(class="column channel-content")
         h2 Channels
+        if channelInput
             each label in labels
                 h3 #{label}
                     each show in channelInput[label]
