--- a/views/home.pug
+++ b/views/home.pug
@@ -3,4 +3,11 @@ extends layout.pug
 block content
     div(class="column main-content")
         img(class="binger-image" src="/images/binger_update.png")
-        div Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris non felis a massa congue faucibus. Interdum et malesuada fames ac ante ipsum primis in faucibus. Proin porta pulvinar sem, in vestibulum libero sagittis non. Mauris eget cursus quam, et venenatis nunc. Maecenas ultrices varius posuere. Etiam vitae fringilla sem. Nam vel luctus nisi, a feugiat nisl. Nullam feugiat vehicula turpis commodo fermentum. Sed ac finibus augue. Sed eu gravida dui, ut interdum diam. Aenean dapibus, elit sit amet dictum lobortis, justo neque volutpat urna, vestibulum posuere lectus orci auctor eros.
+        h2 Hello old and new users, we recently updated our website so I will now take this time to explain our new features! If this is your first time here, this may be a good time to sign up and get accustomed to our site. 
+            h3
+                div(class="notice")
+                    p Welcome to Binger! Store, follow, and review your favorite TV shows. These were the following improvements: 
+                    p First and most importantly, we made the process to register, log-in, and logging out as seamless as possible. We want you to have an amazing experience right as you land on our site. 
+                    p Second, our log-in and user profile handling are more secure than ever before! Logging in will only succeed if both the username and password match to your unique profile. 
+                    p Third, we beefed up our browsing capability. Now you can search through our unique shows with either a keyword or click one of checkboxes we have provided for your convenience. 
+                    p Fourth, Channels watchlist which are unique to every user. To stay updated on their favorite TV shows, users can add shows to these Channels and name it however they may please.
